margin-top-2 to mt-2p

--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -45,7 +45,7 @@
                                         <input class="w-100 margin-bottom-2" id="email" type="email" name="email" placeholder="Email" required/>
                                     </div>
                                 </div>
-                                <label class="margin-top-2">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
+                                <label class="mt-2p">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
                                 <div class="flex-this w-100 mt-1p margin-bottom-16">
                                     <div class="w-100 mr-1p">
                                         <br>
