--- a/templates/accounts/newsletter-unsubscription.html
+++ b/templates/accounts/newsletter-unsubscription.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="flex-this w-100">
                                     <div class="w-100">
-                                        <button type="submit" class="primary-btn action-btn margin-top-2" id="updatebtn" name="updatebtn">Update changes</button>
+                                        <button type="submit" class="primary-btn action-btn mt-2p" id="updatebtn" name="updatebtn">Update changes</button>
                                     </div>
                                 </div>
                             </div>
