--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -120,10 +120,10 @@
       id="g-recaptcha-response"
     />
 
-    <div class="flex-this column signin-banner margin-top-2">
+    <div class="flex-this column signin-banner mt-2p">
       <div class="w-100">
         <div class="flex-this justify-center">
-          <button class="primary-btn action-btn margin-top-2 w-100 signin-btn">
+          <button class="primary-btn action-btn mt-2p w-100 signin-btn">
             Continue
           </button>
         </div>
