--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -55,7 +55,7 @@
             Remove
         </div>
         <div class="center-boundary-container-item-vertically">
-        <a class="primary-btn green-btn margin-top-2"
+        <a class="primary-btn green-btn mt-2p"
         href="{{ boundary_preview_url }}"
         target="_blank">
             View Location
