--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -255,7 +255,7 @@
                         </div>
                         {{ form.note }}
                     </div>
-                    <div><button id="applyLabelsBtn" class="primary-btn action-btn margin-top-2">Apply Labels to Project <i class="fa fa-check" aria-hidden="true"></i></button></div>
+                    <div><button id="applyLabelsBtn" class="primary-btn action-btn mt-2p">Apply Labels to Project <i class="fa fa-check" aria-hidden="true"></i></button></div>
                 {% endif %}
             </form>
 
