--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -17,10 +17,10 @@
                     <p>Approve Label?</p>
                     <div class="flex-this space-between">
                         <div>
-                            <button class="primary-btn action-btn margin-top-2" name="approve_label_yes">Yes</button>
+                            <button class="primary-btn action-btn mt-2p" name="approve_label_yes">Yes</button>
                         </div>
                         <div>
-                            <a id="displayLabelNote" class="primary-btn white-btn margin-top-2">No</a>
+                            <a id="displayLabelNote" class="primary-btn white-btn mt-2p">No</a>
                         </div>                        
                     </div>
                 </div>
