--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -368,7 +368,7 @@
                                     <div><h3 class="bold" id="tk-label-title-prov" name="tk-label-title"></h3></div>
                                 </div>
 
-                                <div class="margin-top-2"><div id="close-tk-prov" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-tk-prov" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
 
@@ -383,7 +383,7 @@
                                 </div>
                                 <div class="right-text">
                                     {% if member_role == 'admin' or member_role == 'editor' %}
-                                        <button id="btnTKProv" class="primary-btn action-btn margin-top-2">Customize this Label <i class="fa fa-arrow-right"></i></button>
+                                        <button id="btnTKProv" class="primary-btn action-btn mt-2p">Customize this Label <i class="fa fa-arrow-right"></i></button>
                                     {% endif %}
                                 </div>
                             </div>
@@ -493,7 +493,7 @@
                                     <input id="tk-label-value-type-prot" type="hidden" value="placeholder" name="tk-label-code">
                                     <div><h3 class="bold" id="tk-label-title-prot" name="tk-label-title"></h3></div>
                                 </div>
-                                <div class="margin-top-2"><div id="close-tk-prot" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-tk-prot" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
                         
@@ -509,7 +509,7 @@
 
                                 <div class="right-text">
                                     {% if member_role == 'admin' or member_role == 'editor' %}
-                                        <button id="btnTKProt" class="primary-btn action-btn margin-top-2">Customize this Label <i class="fa fa-arrow-right"></i></button>
+                                        <button id="btnTKProt" class="primary-btn action-btn mt-2p">Customize this Label <i class="fa fa-arrow-right"></i></button>
                                     {% endif %}
                                 </div>
                             </div>
@@ -589,7 +589,7 @@
                                     <input id="tk-label-value-type-perm" type="hidden" value="placeholder" name="tk-label-code">
                                     <div><h3 class="bold " id="tk-label-title-perm" name="tk-label-title"></h3></div>
                                 </div>
-                                <div class="margin-top-2"><div id="close-tk-perm" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-tk-perm" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
             
@@ -605,7 +605,7 @@
 
                                 <div>
                                     {% if member_role == 'admin' or member_role == 'editor' %}
-                                        <button id="btnTKPerms" class="primary-btn action-btn margin-top-2">Customize Label <i class="fa fa-arrow-right"></i></button>
+                                        <button id="btnTKPerms" class="primary-btn action-btn mt-2p">Customize Label <i class="fa fa-arrow-right"></i></button>
                                     {% endif %}
                                 </div>
                             </div>
@@ -700,7 +700,7 @@
                                     <input id="bc-label-value-type-prov" type="hidden" value="placeholder" name="bc-label-code">
                                     <div><h3 id="bc-label-title-prov" name="bc-label-title"></h3></div>
                                 </div>
-                                <div class="margin-top-2"><div id="close-bc-prov" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-bc-prov" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
             
@@ -717,7 +717,7 @@
         
                             <div class="right-text">
                                 {% if member_role == 'admin' or member_role == 'editor' %}
-                                    <button id="btnBCProv" class="primary-btn action-btn margin-top-2 margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
+                                    <button id="btnBCProv" class="primary-btn action-btn mt-2p margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
                                 {% endif %}
                             </div>
                         </form>
@@ -770,7 +770,7 @@
                                     <input id="bc-label-value-type-prot" type="hidden" value="placeholder" name="bc-label-code">
                                     <div><h3 id="bc-label-title-prot" name="bc-label-title"></h3></div>
                                 </div>
-                                <div class="margin-top-2"><div id="close-bc-prot" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-bc-prot" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
             
@@ -787,7 +787,7 @@
         
                             <div class="right-text">
                                 {% if member_role == 'admin' or member_role == 'editor' %}
-                                    <button id="btnBCProt" class="primary-btn action-btn margin-top-2 margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
+                                    <button id="btnBCProt" class="primary-btn action-btn mt-2p margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
                                 {% endif %}
                             </div>
                         </form>
@@ -868,7 +868,7 @@
                                     <input id="bc-label-value-type-perm" type="hidden" value="placeholder" name="bc-label-code">
                                     <div><h3 id="bc-label-title-perm" name="bc-label-title"></h3></div>
                                 </div>
-                                <div class="margin-top-2"><div id="close-bc-perm" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
+                                <div class="mt-2p"><div id="close-bc-perm" onclick="closeLabelInfoDiv(this)" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></div></div>                                
                             </div>
 
             
@@ -885,7 +885,7 @@
 
                             <div class="right-text">
                                 {% if member_role == 'admin' or member_role == 'editor' %}
-                                    <button id="btnBCPerms" class="primary-btn action-btn margin-top-2 margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
+                                    <button id="btnBCPerms" class="primary-btn action-btn mt-2p margin-bottom-8">Customize this Label <i class="fa fa-arrow-right"></i></button>
                                 {% endif %}
                             </div>
                         </form>
