--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -68,7 +68,7 @@
         </div>
         <div class="flex-this">
             <div class="margin-right-16 flex-this align-center"><small class="block"><a href="{% url 'dashboard' %}" class="default-a">Skip this for now</a></small></div>
-            <div><button id="openJoinRequestModalBtn" class="primary-btn action-btn margin-top-2 ">Next <i class="fa fa-arrow-right"></i></button></div>
+            <div><button id="openJoinRequestModalBtn" class="primary-btn action-btn mt-2p ">Next <i class="fa fa-arrow-right"></i></button></div>
         </div>
      </div>
 
@@ -131,7 +131,7 @@
                         <small>By sending this request, you consent for your message and email address to be shared with account administrators.</small>
                     </p>
                     <div>
-                        <button class="primary-btn action-btn margin-top-2">Send request</button>
+                        <button class="primary-btn action-btn mt-2p">Send request</button>
                     </div>                    
                 </div>
 
