--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -671,7 +671,7 @@
                         </div>
 
                         <div class="flex-this w-100 margin-bottom-16">
-                            <div class="w-50 margin-top-2">
+                            <div class="w-50 mt-2p">
                                 <button
                                     id="sendMemberInviteBtn"
                                     class="primary-btn action-btn"
@@ -680,7 +680,7 @@
                                 >Send Invitation </button>
                             </div>
 
-                            <div class="w-50 margin-top-2 right-text">
+                            <div class="w-50 mt-2p right-text">
                                 {% if not env == "SANDBOX" %}
                                     <small>Looking for someone who isn't on this list? <br>
                                         <a onclick="openInviteUserModalView()" class="darkteal-text pointer">
@@ -712,10 +712,10 @@
 
                     <div class="flex-this row">
                         <div class="flex-this row w-50 flex-start">
-                            <button onclick="openAddModalView()" type="button" class="primary-btn white-btn margin-top-2">Back</button>
+                            <button onclick="openAddModalView()" type="button" class="primary-btn white-btn mt-2p">Back</button>
                         </div>
                         <div class="flex-this row w-50 flex-end">
-                            <button type="submit" class="primary-btn action-btn margin-top-2">Send Invitation</button>
+                            <button type="submit" class="primary-btn action-btn mt-2p">Send Invitation</button>
                         </div>
                     </div>
                 </form>
