--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -5,7 +5,7 @@
 
     <div class="flex-this margin-top-16">
         <div>
-            <a onclick="copyToClipboard('uniqueIDToCopy')" class="primary-btn margin-top-2 copied-display">
+            <a onclick="copyToClipboard('uniqueIDToCopy')" class="primary-btn mt-2p copied-display">
                 <i onclick="buttonPulse(this)" class="fa fa-copy round-btn"></i>
             </a>
         </div>
@@ -20,7 +20,7 @@
     <div class="flex-this margin-top-16">
         {% if project.providers_id %}
             <div>
-                <a onclick="copyToClipboard('providersIDToCopy')" class="primary-btn margin-top-2 copied-display">
+                <a onclick="copyToClipboard('providersIDToCopy')" class="primary-btn mt-2p copied-display">
                     <i onclick="buttonPulse(this)"  class="fa fa-copy round-btn"></i>
                 </a>
             </div>
