--- a/templates/partials/_update-account-main-area.html
+++ b/templates/partials/_update-account-main-area.html
@@ -243,7 +243,7 @@
                 By providing it, you consent for it to be shown to other Hub users, see the <a href="https://localcontexts.org/privacy-policy/" class="default-a" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.</small>
         </p>
         <div class="margin-top-16 w-50">
-            <button class="primary-btn action-btn margin-top-2">Save changes <i class="fa fa-arrow-right"></i></button>
+            <button class="primary-btn action-btn mt-2p">Save changes <i class="fa fa-arrow-right"></i></button>
         </div>
     </div>
 </form>
