--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -72,7 +72,7 @@
                     Remove
                 </div>
                 <div class="center-boundary-container-item-vertically">
-                <a class="primary-btn green-btn margin-top-2"
+                <a class="primary-btn green-btn mt-2p"
                    href="{% url 'community-boundary-view' community.id %}"
                    target="_blank">
                     View Location
