--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -356,7 +356,7 @@
                 {% endif %}
             </div>
 
-            <button id="submitProjectBtn" class="primary-btn action-btn margin-top-2">Save Project</button>
+            <button id="submitProjectBtn" class="primary-btn action-btn mt-2p">Save Project</button>
         </div>
     </form>
 
