--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -82,7 +82,7 @@
                 </div>
         
                 <div class="margin-top-8">
-                    <button id="submitResearcher" class="primary-btn action-btn margin-top-2">Get Started <i class="fa fa-arrow-right"></i></button>
+                    <button id="submitResearcher" class="primary-btn action-btn mt-2p">Get Started <i class="fa fa-arrow-right"></i></button>
                 </div>
             </div>
 
