--- a/templates/accounts/apikey.html
+++ b/templates/accounts/apikey.html
@@ -36,9 +36,9 @@
                 <form id="apiKeyGeneratorForm" method="POST">
                     {% csrf_token %}
                     {% if keyvisible %}
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="hidebtn">Hide Key</button>
+                        <button type="submit" class="primary-btn action-btn mt-2p" id="showHideBtn" name="hidebtn">Hide Key</button>
                     {% else %}
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="showbtn">Show Key</button>
+                        <button type="submit" class="primary-btn action-btn mt-2p" id="showHideBtn" name="showbtn">Show Key</button>
                         <div class="messageFloat">{% include 'partials/_alerts.html' %}</div>
                     {% endif %}
                 </form>
@@ -83,7 +83,7 @@
                 <div class="w-70 margin-bottom-2">
                     <p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.</p>
                     <p class="no-top-margin">You do not have an API key. Click the button below to generate one.</p>
-                    <button type="submit" class="primary-btn action-btn margin-top-2" name="generatebtn">Generate API Key <i class="fa fa-arrow-right"></i></button>
+                    <button type="submit" class="primary-btn action-btn mt-2p" name="generatebtn">Generate API Key <i class="fa fa-arrow-right"></i></button>
                 </div>
             </form>
         </div>
