--- a/templates/accounts/confirm-account.html
+++ b/templates/accounts/confirm-account.html
@@ -72,7 +72,7 @@
                 </p>
             </div>
             <div class="flex-this flex-end">
-                <button class="primary-btn action-btn margin-top-2">Continue <i class="fa fa-arrow-right"></i></button>
+                <button class="primary-btn action-btn mt-2p">Continue <i class="fa fa-arrow-right"></i></button>
             </div>            
         </div>
 
