--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="flex-this flex-end">
-      <button class="primary-btn action-btn margin-top-2">
+      <button class="primary-btn action-btn mt-2p">
         Continue <i class="fa fa-arrow-right"></i>
       </button>
     </div>
