--- a/templates/accounts/invite.html
+++ b/templates/accounts/invite.html
@@ -12,7 +12,7 @@
             {{ invite_form.message }}<br>
 
             {% include 'partials/_alerts.html' %}
-            <button type="submit" class="primary-btn action-btn margin-top-2 ">Send Invitation</button>
+            <button type="submit" class="primary-btn action-btn mt-2p ">Send Invitation</button>
         </form>
     </div>
 
