--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -27,10 +27,10 @@
             <div>
                 <a href="{% url 'reset_password'%}" class="default-a">Forgot your password?</a>
             </div> 
-            <div class="flex-this column margin-top-2">
+            <div class="flex-this column mt-2p">
                 <div class="w-100"> 
 
-                    <div class="flex-this justify-center"> <button class="primary-btn action-btn margin-top-2 w-100 signin-btn">Sign in</button></div>
+                    <div class="flex-this justify-center"> <button class="primary-btn action-btn mt-2p w-100 signin-btn">Sign in</button></div>
                 </div>
                 <div class="flex-this justify-center align-center gap-1">
                     <div class="horizental-line"> </div>
