--- a/templates/accounts/password-reset-confirm.html
+++ b/templates/accounts/password-reset-confirm.html
@@ -10,7 +10,7 @@
                 {{ form.as_p }}
             <br>
             <div class="flex-this flex-end">
-                <button class="primary-btn action-btn margin-top-2 default-btn-width">Submit</button>
+                <button class="primary-btn action-btn mt-2p default-btn-width">Submit</button>
             </div>
         </form>
 
