--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -76,7 +76,7 @@
             </div>
     
             <div class="margin-top-8">
-                <button class="primary-btn action-btn margin-top-2">Continue <i class="fa fa-arrow-right"></i></button>
+                <button class="primary-btn action-btn mt-2p">Continue <i class="fa fa-arrow-right"></i></button>
             </div>
         </div>
 
