--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -284,7 +284,7 @@
             <!-- Add translation -->
             {% include 'partials/_add-translation.html' %}
 
-            <div class="text-align-right margin-bottom-16 margin-top-2 flex-this align-center">
+            <div class="text-align-right margin-bottom-16 mt-2p flex-this align-center">
                 <button id="saveLabelBtn" name="save_label_btn" class="primary-btn action-btn">Save Label</button> 
                 <small id="language-error" class="red-text ml-1p hide">Please clear or select a language from the dropdown list.</small>
             </div>
