--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -109,7 +109,7 @@
         <div class="flex-this flex-end">
             
             <div class="margin-top-8">
-                <button class="primary-btn action-btn margin-top-2" name="create-institution-btn">Continue <i class="fa fa-arrow-right"></i></button>
+                <button class="primary-btn action-btn mt-2p" name="create-institution-btn">Continue <i class="fa fa-arrow-right"></i></button>
             </div>
         </div>
 
