--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -108,10 +108,10 @@
             {{ form.ror_id }}
             <div class="flex-this creat-account__container-width__buttons">
                 <div class="margin-right-8">
-                    <button id="clearFormBtn" class="primary-btn white-btn btn-width__clear-form margin-top-2">Clear form <i class="fa-regular fa-eraser"></i></button>
+                    <button id="clearFormBtn" class="primary-btn white-btn btn-width__clear-form mt-2p">Clear form <i class="fa-regular fa-eraser"></i></button>
                 </div>
                 <div>
-                    <button id="createInstitutionBtn" class="primary-btn disabled-btn margin-top-2" name="create-institution-btn" disabled>Continue <i class="fa fa-arrow-right"></i></button>
+                    <button id="createInstitutionBtn" class="primary-btn disabled-btn mt-2p" name="create-institution-btn" disabled>Continue <i class="fa fa-arrow-right"></i></button>
                 </div>                
             </div>
         </div>
