--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -9,7 +9,7 @@
             {% if community or institution %}
                 {% if member_role == 'admin' or member_role == 'editor' %}
                     <div class="flex-this align-center">
-                        <a class="primary-btn green-btn margin-top-2 "
+                        <a class="primary-btn green-btn mt-2p "
                             {% if community %} href="{% url 'create-project' community.id %}" {% endif %}
                             {% if institution %} href="{% url 'inst-create-project' institution.id %}" {% endif %}
                         >
@@ -19,7 +19,7 @@
                 {% endif %}
             {% else %}
                 <div class="flex-this align-center">
-                    <a class="primary-btn green-btn margin-top-2 " href="{% url 'researcher-create-project' researcher.id %}">
+                    <a class="primary-btn green-btn mt-2p " href="{% url 'researcher-create-project' researcher.id %}">
                         Create a Project <i class="fa fa-arrow-right"></i>
                     </a>
                 </div>
