--- a/templates/accounts/password-reset.html
+++ b/templates/accounts/password-reset.html
@@ -1,7 +1,7 @@
 {% extends 'register-base.html' %} {% load static %} {% block title %} Reset Your Password {% endblock %}
 {% block card %}
     <div class="flex-this column w-90">
-        <h2 class="margin-bottom-2">Reset your password</h2>
+        <h2 class="mb-2p">Reset your password</h2>
         <p class="no-top-margin">
             Forgot your password? <br> 
             Please enter the email address you registered with and we will send you instructions for setting a new one.
