--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -558,7 +558,7 @@
             </div>
 
             <!-- Permissions FORM -->
-            <div id="tklabel-info-perm" class="space-between margin-bottom-2 border-top-solid-teal border-bottom-solid-teal hide">
+            <div id="tklabel-info-perm" class="space-between mb-2p border-top-solid-teal border-bottom-solid-teal hide">
                 <div class="flex-this">
                     <div class="w-20 mr-1p mt-1p" style="text-align: right;">
                         <div id="tklabel-expanded-img-tko" class="tk-img-div hide">
@@ -672,7 +672,7 @@
 
             </div>
             <!-- PROVENANCE FORM -->
-            <div id="bclabel-info-prov" class="margin-bottom-2 border-top-solid-teal hide">
+            <div id="bclabel-info-prov" class="mb-2p border-top-solid-teal hide">
                 <div class="flex-this">
                     <div class="w-20 mr-1p mt-1p" style="text-align: right;">
         
@@ -746,7 +746,7 @@
                 </div>
             </div>
             <!-- PROTOCOLS FORM -->
-            <div id="bclabel-info-prot" class="margin-bottom-2 border-top-solid-teal hide">
+            <div id="bclabel-info-prot" class="mb-2p border-top-solid-teal hide">
                 <div class="flex-this">
                     <div class="w-20 mr-1p mt-1p" style="text-align: right;">
         
@@ -835,7 +835,7 @@
 
 
             <!-- PERMISSIONS FORM -->
-            <div id="bclabel-info-perm" class="margin-bottom-2 border-top-solid-teal border-bottom-solid-teal hide">
+            <div id="bclabel-info-perm" class="mb-2p border-top-solid-teal border-bottom-solid-teal hide">
                 <div class="flex-this">
                     <div class="w-20 mr-1p mt-1p" style="text-align: right;">
 
