--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,7 +4,7 @@
 {% block card %}
     <div class="flex-this space-between margin-bottom-8 w-90">
         <div>
-            <h2 class="margin-bottom-2">Welcome back!</h2>
+            <h2 class="mb-2p">Welcome back!</h2>
         </div>
         <div><p>Not signed up yet? <a href="{% url 'register' %}" class="default-a">Register</a></p></div>
     </div>
