--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -31,18 +31,18 @@
                                 <div class="flex-this w-100">
                                     <div class="w-100 mr-1p">
                                         <label>Name</label>
-                                        <input class="w-100 margin-bottom-2" id="first_name" type="text" name="first_name" placeholder="First Name"/>
+                                        <input class="w-100 mb-2p" id="first_name" type="text" name="first_name" placeholder="First Name"/>
                                     </div>
                                 </div>
                                 <div class="flex-this w-100">
                                     <div class="w-100 mr-1p">
-                                        <input class="w-100 margin-bottom-2" id="last_name" type="text" name="last_name" placeholder="Last Name"/>
+                                        <input class="w-100 mb-2p" id="last_name" type="text" name="last_name" placeholder="Last Name"/>
                                     </div>
                                 </div>
                                 <div class="flex-this w-100">
                                     <div class="w-100 mr-1p">
                                         <label>Email<span title="Required" class="red-text"> *</span></label>
-                                        <input class="w-100 margin-bottom-2" id="email" type="email" name="email" placeholder="Email" required/>
+                                        <input class="w-100 mb-2p" id="email" type="email" name="email" placeholder="Email" required/>
                                     </div>
                                 </div>
                                 <label class="mt-2p">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
