--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -3,7 +3,7 @@
     <div class="flex-this column w-100">
         <div class="flex-this space-between">
             <div>
-                <h2 class="margin-bottom-2">
+                <h2 class="mb-2p">
                     {% if community %}Community {% endif %}
                     {% if institution %}Institution {% endif %}
                     Account
