--- a/templates/partials/_embed.html
+++ b/templates/partials/_embed.html
@@ -10,7 +10,7 @@
     <body>
         {% if restricted %}
             <div class="flex-this w-100">
-                <div class="margin-left-8 margin-right-8 auto-margin" style="display: inherit;">
+                <div class="margin-left-8 margin-right-8 m-auto" style="display: inherit;">
                     <a 
                         href="https://localcontexts.org" 
                         style="display: inline-flex;">
@@ -368,7 +368,7 @@
 
             <!-- Logo and Page Link -->
             <div class="flex-this w-100 {% if align == 'right' %}flex-end{% else %}flex-start{% endif%}" style="padding: 12px; padding-top: 0px;">
-                <div class="margin-left-8 margin-right-8 auto-margin" style="display: inherit;">
+                <div class="margin-left-8 margin-right-8 m-auto" style="display: inherit;">
                     <a 
                         href="https://localcontexts.org" 
                         style="display: inline-flex;">
