--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <div class="w-80 auto-margin">
+    <div class="w-80 m-auto">
 
         <div id="openDiv-disclosureTK" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
