--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -21,7 +21,7 @@
     {% endif %}
 {% endif %}
 
-<div class="flex-this auto-margin" style="max-width: 1271px;">
+<div class="flex-this m-auto" style="max-width: 1271px;">
 
     <!-- PROJECT -->
     <div class="project-card content-card-space">
